syntax = "proto3";

package carddeck;

option go_package = "./proto;carddeck";

service Carddeck {
	rpc CreateCard(CardRequest) returns (PublicIDResponse) {}
	rpc CreateDeck(DeckRequest) returns (PublicIDResponse) {}
}

message CardRequest {
	uint64 userID = 1;
	string deckPublicID = 2;
	string frontside = 3;
	string backside = 4;
}

message DeckRequest {
	uint64 userID = 1;
	string groupPublicID = 2;
	string deckName = 3;
}

message PublicIDResponse {
	string publicID = 1;
}